[project]
name = "langchain-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-mcp-adapters>=0.0.5",
    "langgraph>=0.3.13",
    "mcp>=1.4.1",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
queryagent = "sql_query_agency.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_query_agency"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an async test",
]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]
